// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichSelectField should display right value on grouped options 1`] = `
<DocumentFragment>
  .cache-1gb28ew-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-acm3fg-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-acm3fg-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-acm3fg-control:focus-within {
  border-color: #390171;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-acm3fg-control:focus-within svg {
  fill: #390171;
}

.cache-acm3fg-control:hover {
  border-color: #390171;
}

.cache-acm3fg-control:hover svg {
  fill: #390171;
}

.cache-evyzo2-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-evyzo2-ValueContainer label {
  display: initial;
}

.cache-isgbik {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
  -webkit-transform: translate(0, -8px) scale(0.8);
  -moz-transform: translate(0, -8px) scale(0.8);
  -ms-transform: translate(0, -8px) scale(0.8);
  transform: translate(0, -8px) scale(0.8);
  transform-origin: left;
  padding-left: 8px;
  left: 0;
  top: 2px;
  opacity: 1;
}

.cache-fs070l-singleValue {
  color: #4a4f62;
  grid-area: 1/1/2/3;
  margin-left: 0;
  margin-right: 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  box-sizing: border-box;
  margin-top: 5px;
  padding-left: 0;
}

.cache-1eede0w-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1eede0w-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-ohcuk5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-16s6csf-sizeStyles {
  vertical-align: middle;
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-9vn1ol {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  overflow: hidden;
}

.cache-19pioxy {
  font-size: 12px;
  color: #a6102d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class=" cache-1gb28ew-container-StyledContainer e1lzna4r5"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-acm3fg-control"
      >
        <div
          class=" cache-evyzo2-ValueContainer"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-isgbik e1lzna4r2"
            for=":r4:"
          >
            Select...
          </label>
          <div
            class=" cache-fs070l-singleValue"
          >
            Group Label
          </div>
          <div
            class="cache-1eede0w-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id=":r4:"
              role="combobox"
              spellcheck="false"
              style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <div
              class="cache-ohcuk5 e1sgck4o0"
            >
              <svg
                class="cache-16s6csf-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <input
        name="test"
        type="hidden"
        value="Group Value"
      />
      <div
        class="cache-9vn1ol e1lzna4r3"
      >
        <div
          class="cache-19pioxy e1lzna4r4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RichSelectField should render correctly 1`] = `
<DocumentFragment>
  .cache-1gb28ew-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-acm3fg-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-acm3fg-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-acm3fg-control:focus-within {
  border-color: #390171;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-acm3fg-control:focus-within svg {
  fill: #390171;
}

.cache-acm3fg-control:hover {
  border-color: #390171;
}

.cache-acm3fg-control:hover svg {
  fill: #390171;
}

.cache-evyzo2-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-evyzo2-ValueContainer label {
  display: initial;
}

.cache-xrmeok {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.cache-m44uhw-placeholder {
  color: #b2b6c3;
  grid-area: 1/1/2/3;
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.cache-1eede0w-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1eede0w-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-ohcuk5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-16s6csf-sizeStyles {
  vertical-align: middle;
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-9vn1ol {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  overflow: hidden;
}

.cache-19pioxy {
  font-size: 12px;
  color: #a6102d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class=" cache-1gb28ew-container-StyledContainer e1lzna4r5"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-acm3fg-control"
      >
        <div
          class=" cache-evyzo2-ValueContainer"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-xrmeok e1lzna4r2"
            for=":r0:"
          >
            Select...
          </label>
          <div
            class=" cache-m44uhw-placeholder"
            id="react-select-2-placeholder"
          >
            Select...
          </div>
          <div
            class="cache-1eede0w-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-2-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id=":r0:"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <div
              class="cache-ohcuk5 e1sgck4o0"
            >
              <svg
                class="cache-16s6csf-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <input
        name="test"
        type="hidden"
        value=""
      />
      <div
        class="cache-9vn1ol e1lzna4r3"
      >
        <div
          class="cache-19pioxy e1lzna4r4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RichSelectField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-iwdjsb-container-StyledContainer {
  width: 100%;
  pointer-events: initial;
  pointer-events: none;
  position: relative;
  box-sizing: border-box;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-1cxfu5m-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: none;
  border-width: 0;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #c4c9d6;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-1cxfu5m-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-1jfs5jc-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  cursor: not-allowed;
  height: 100%;
  padding-top: 0;
}

.cache-1jfs5jc-ValueContainer label {
  display: initial;
}

.cache-xrmeok {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.cache-wd8d14-placeholder {
  color: #c4c9d6;
  grid-area: 1/1/2/3;
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.cache-y0rkal-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: hidden;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-y0rkal-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-ohcuk5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-b8lm46-sizeStyles {
  vertical-align: middle;
  fill: #c4c9d6;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-9vn1ol {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  overflow: hidden;
}

.cache-19pioxy {
  font-size: 12px;
  color: #a6102d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class=" cache-iwdjsb-container-StyledContainer e1lzna4r5"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-1cxfu5m-control"
      >
        <div
          class=" cache-1jfs5jc-ValueContainer"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-xrmeok e1lzna4r2"
            for=":r1:"
          >
            Select...
          </label>
          <div
            class=" cache-wd8d14-placeholder"
            id="react-select-3-placeholder"
          >
            Select...
          </div>
          <div
            class="cache-y0rkal-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-3-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id=":r1:"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <div
              class="cache-ohcuk5 e1sgck4o0"
            >
              <svg
                class="cache-b8lm46-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cache-9vn1ol e1lzna4r3"
      >
        <div
          class="cache-19pioxy e1lzna4r4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RichSelectField should render correctly multiple 1`] = `
<DocumentFragment>
  .cache-1gb28ew-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-acm3fg-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-acm3fg-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-acm3fg-control:focus-within {
  border-color: #390171;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-acm3fg-control:focus-within svg {
  fill: #390171;
}

.cache-acm3fg-control:hover {
  border-color: #390171;
}

.cache-acm3fg-control:hover svg {
  fill: #390171;
}

.cache-evyzo2-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-evyzo2-ValueContainer label {
  display: initial;
}

.cache-xrmeok {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.cache-m44uhw-placeholder {
  color: #b2b6c3;
  grid-area: 1/1/2/3;
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.cache-gjy3q3-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
}

.cache-gjy3q3-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-ohcuk5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-16s6csf-sizeStyles {
  vertical-align: middle;
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-9vn1ol {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  overflow: hidden;
}

.cache-19pioxy {
  font-size: 12px;
  color: #a6102d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class=" cache-1gb28ew-container-StyledContainer e1lzna4r5"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-acm3fg-control"
      >
        <div
          class=" cache-evyzo2-ValueContainer"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-xrmeok e1lzna4r2"
            for=":r2:"
          >
            Select...
          </label>
          <div
            class=" cache-m44uhw-placeholder"
            id="react-select-4-placeholder"
          >
            Select...
          </div>
          <div
            class="cache-gjy3q3-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-4-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id=":r2:"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <div
              class="cache-ohcuk5 e1sgck4o0"
            >
              <svg
                class="cache-16s6csf-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div>
        <input
          name="test"
          type="hidden"
          value=""
        />
      </div>
      <div
        class="cache-9vn1ol e1lzna4r3"
      >
        <div
          class="cache-19pioxy e1lzna4r4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RichSelectField should render correctly with a disabled option 1`] = `
<DocumentFragment>
  .cache-1gb28ew-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-acm3fg-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-acm3fg-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-acm3fg-control:focus-within {
  border-color: #390171;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-acm3fg-control:focus-within svg {
  fill: #390171;
}

.cache-acm3fg-control:hover {
  border-color: #390171;
}

.cache-acm3fg-control:hover svg {
  fill: #390171;
}

.cache-evyzo2-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-evyzo2-ValueContainer label {
  display: initial;
}

.cache-xrmeok {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.cache-m44uhw-placeholder {
  color: #b2b6c3;
  grid-area: 1/1/2/3;
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.cache-1eede0w-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1eede0w-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-ohcuk5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-16s6csf-sizeStyles {
  vertical-align: middle;
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-9vn1ol {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  overflow: hidden;
}

.cache-19pioxy {
  font-size: 12px;
  color: #a6102d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class=" cache-1gb28ew-container-StyledContainer e1lzna4r5"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-acm3fg-control"
      >
        <div
          class=" cache-evyzo2-ValueContainer"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-xrmeok e1lzna4r2"
            for=":r3:"
          >
            Select...
          </label>
          <div
            class=" cache-m44uhw-placeholder"
            id="react-select-5-placeholder"
          >
            Select...
          </div>
          <div
            class="cache-1eede0w-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-5-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id=":r3:"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <div
              class="cache-ohcuk5 e1sgck4o0"
            >
              <svg
                class="cache-16s6csf-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <input
        name="test"
        type="hidden"
        value=""
      />
      <div
        class="cache-9vn1ol e1lzna4r3"
      >
        <div
          class="cache-19pioxy e1lzna4r4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RichSelectField should trigger events 1`] = `
<DocumentFragment>
  .cache-1gb28ew-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-acm3fg-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-acm3fg-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-acm3fg-control:focus-within {
  border-color: #390171;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-acm3fg-control:focus-within svg {
  fill: #390171;
}

.cache-acm3fg-control:hover {
  border-color: #390171;
}

.cache-acm3fg-control:hover svg {
  fill: #390171;
}

.cache-evyzo2-ValueContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-evyzo2-ValueContainer label {
  display: initial;
}

.cache-isgbik {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
  -webkit-transform: translate(0, -8px) scale(0.8);
  -moz-transform: translate(0, -8px) scale(0.8);
  -ms-transform: translate(0, -8px) scale(0.8);
  transform: translate(0, -8px) scale(0.8);
  transform-origin: left;
  padding-left: 8px;
  left: 0;
  top: 2px;
  opacity: 1;
}

.cache-fs070l-singleValue {
  color: #4a4f62;
  grid-area: 1/1/2/3;
  margin-left: 0;
  margin-right: 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  box-sizing: border-box;
  margin-top: 5px;
  padding-left: 0;
}

.cache-1eede0w-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1eede0w-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-ralm3g-IndicatorsContainer {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-ohcuk5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-16s6csf-sizeStyles {
  vertical-align: middle;
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-9vn1ol {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  overflow: hidden;
}

.cache-19pioxy {
  font-size: 12px;
  color: #a6102d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class=" cache-1gb28ew-container-StyledContainer e1lzna4r5"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-acm3fg-control"
      >
        <div
          class=" cache-evyzo2-ValueContainer"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-isgbik e1lzna4r2"
            for=":r5:"
          >
            Select...
          </label>
          <div
            class=" cache-fs070l-singleValue"
          >
            Label
          </div>
          <div
            class="cache-1eede0w-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id=":r5:"
              role="combobox"
              spellcheck="false"
              style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-ralm3g-IndicatorsContainer"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <div
              class="cache-ohcuk5 e1sgck4o0"
            >
              <svg
                class="cache-16s6csf-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <input
        name="test"
        type="hidden"
        value="value"
      />
      <div
        class="cache-9vn1ol e1lzna4r3"
      >
        <div
          class="cache-19pioxy e1lzna4r4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;
